Ajustado novo layout dos Podcasts

--- a/src/index.html
+++ b/src/index.html
@@ -459,13 +459,10 @@
         </header>
         <div class="podcast-container">
           <div class="podcast-box">
-            <div class="podcast-banner">
+            <div class="podcast-banner" style="background-image: url('images/fundo_podcasts.jpg');">
               <div class="title-banner">POD<br />CAST</div>
-              <div class="logo">
-                <img src="images/logo-branco.png" alt="" />
-              </div>
               <div class="microfone">
-                <img src="images/microfone.png" alt="" />
+                <img src="images/microfone_podcast.png" alt="" />
               </div>
             </div>
             <div class="plataformas">
@@ -507,19 +504,19 @@
                       <path
                         fill="currentColor"
                         d="M48.875,0C21.883,0,0,21.882,0,48.875S21.883,97.75,48.875,97.75S97.75,75.868,97.75,48.875S75.867,0,48.875,0z
-		 M25.676,69.248H12.365v-4.033h13.311V69.248z M25.676,64.006H12.365V59.97h13.311V64.006z M25.676,58.762H12.365v-4.035h13.311
-		V58.762z M25.676,53.516H12.365v-4.033h13.311V53.516z M25.676,48.271H12.365v-4.034h13.311V48.271z M40.604,69.248H27.291v-4.033
-		h13.313V69.248z M40.604,64.006H27.291V59.97h13.313V64.006z M40.604,58.762H27.291v-4.035h13.313V58.762z M55.531,69.248H42.219
-		v-4.033h13.313L55.531,69.248L55.531,69.248z M55.531,64.006H42.219V59.97h13.313L55.531,64.006L55.531,64.006z M55.531,58.762
-		H42.219v-4.035h13.313L55.531,58.762L55.531,58.762z M55.531,53.516H42.219v-4.033h13.313L55.531,53.516L55.531,53.516z
-		 M55.531,48.271H42.219v-4.034h13.313L55.531,48.271L55.531,48.271z M55.531,43.026H42.219v-4.034h13.313L55.531,43.026
-		L55.531,43.026z M55.531,37.783H42.219v-4.035h13.313L55.531,37.783L55.531,37.783z M70.457,69.248H57.145v-4.033h13.313
-		L70.457,69.248L70.457,69.248z M70.457,64.006H57.145V59.97h13.313L70.457,64.006L70.457,64.006z M70.457,58.762H57.145v-4.035
-		h13.313L70.457,58.762L70.457,58.762z M70.457,53.516H57.145v-4.033h13.313L70.457,53.516L70.457,53.516z M70.457,48.271H57.145
-		v-4.034h13.313L70.457,48.271L70.457,48.271z M85.385,69.248H72.072v-4.033h13.312V69.248z M85.385,64.006H72.072V59.97h13.312
-		V64.006z M85.385,58.759H72.072v-4.034h13.312V58.759z M85.385,53.516H72.072V49.48h13.312V53.516z M85.385,48.271H72.072v-4.037
-		h13.312V48.271z M85.385,43.025H72.072v-4.033h13.312V43.025z M85.385,37.78H72.072v-4.033h13.312V37.78z M72.072,32.536v-4.034
-		h13.312v4.034H72.072z"
+                          M25.676,69.248H12.365v-4.033h13.311V69.248z M25.676,64.006H12.365V59.97h13.311V64.006z M25.676,58.762H12.365v-4.035h13.311
+                          V58.762z M25.676,53.516H12.365v-4.033h13.311V53.516z M25.676,48.271H12.365v-4.034h13.311V48.271z M40.604,69.248H27.291v-4.033
+                          h13.313V69.248z M40.604,64.006H27.291V59.97h13.313V64.006z M40.604,58.762H27.291v-4.035h13.313V58.762z M55.531,69.248H42.219
+                          v-4.033h13.313L55.531,69.248L55.531,69.248z M55.531,64.006H42.219V59.97h13.313L55.531,64.006L55.531,64.006z M55.531,58.762
+                          H42.219v-4.035h13.313L55.531,58.762L55.531,58.762z M55.531,53.516H42.219v-4.033h13.313L55.531,53.516L55.531,53.516z
+                          M55.531,48.271H42.219v-4.034h13.313L55.531,48.271L55.531,48.271z M55.531,43.026H42.219v-4.034h13.313L55.531,43.026
+                          L55.531,43.026z M55.531,37.783H42.219v-4.035h13.313L55.531,37.783L55.531,37.783z M70.457,69.248H57.145v-4.033h13.313
+                          L70.457,69.248L70.457,69.248z M70.457,64.006H57.145V59.97h13.313L70.457,64.006L70.457,64.006z M70.457,58.762H57.145v-4.035
+                          h13.313L70.457,58.762L70.457,58.762z M70.457,53.516H57.145v-4.033h13.313L70.457,53.516L70.457,53.516z M70.457,48.271H57.145
+                          v-4.034h13.313L70.457,48.271L70.457,48.271z M85.385,69.248H72.072v-4.033h13.312V69.248z M85.385,64.006H72.072V59.97h13.312
+                          V64.006z M85.385,58.759H72.072v-4.034h13.312V58.759z M85.385,53.516H72.072V49.48h13.312V53.516z M85.385,48.271H72.072v-4.037
+                          h13.312V48.271z M85.385,43.025H72.072v-4.033h13.312V43.025z M85.385,37.78H72.072v-4.033h13.312V37.78z M72.072,32.536v-4.034
+                          h13.312v4.034H72.072z"
                       />
                     </svg>
                   </span>
@@ -606,6 +603,90 @@
                       <h4 class="podcast-data mfm-cinza">24 de março de 2020</h4>
                       <div class="podcast-item-detail-info">
                         <h3>Lorem ipsum dolor.</h3>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="podcast-item-player">
+                      <div class="controls">
+                        <a href="#" class="btn-play play first" id="play-3">
+                          <div class="track" url="podcasts/audio3.mp3" title="Tema do Podcast Ep. 03"></div>
+                          <div class="border-gradient">
+                            <div class="equalize">
+                              <i class="everlib-logo-first-bar"></i>
+                              <i class="everlib-logo-second-bar"></i>
+                              <i class="everlib-logo-third-bar"></i>
+                            </div>
+                          </div>
+                          <h3><i class="mdi mdi-play-circle-outline"></i></h3>
+                        </a>
+                        <span class="total-duration">
+                          <img src="images/massafm_site_loader.gif" alt="" />
+                        </span>
+                      </div>
+                    </div>
+                    <div class="podcast-item-detail">
+                      <h2 class="podcast-chapeu mfm-roxo">#MassaFM | Episódio 3</h2>
+                      <h1 class="podcast-titulo mfm-roxo">Tema do Podcast Ep. 03</h1>
+                      <h4 class="podcast-data mfm-cinza">17 de março de 2020</h4>
+                      <div class="podcast-item-detail-info">
+                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae officiis tenetur illum adipisci.</h3>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="podcast-item-player">
+                      <div class="controls">
+                        <a href="#" class="btn-play play first" id="play-2">
+                          <div class="track" url="podcasts/audio4.mp3" title="Tema do Podcast Ep. 02"></div>
+                          <div class="border-gradient">
+                            <div class="equalize">
+                              <i class="everlib-logo-first-bar"></i>
+                              <i class="everlib-logo-second-bar"></i>
+                              <i class="everlib-logo-third-bar"></i>
+                            </div>
+                          </div>
+                          <h3><i class="mdi mdi-play-circle-outline"></i></h3>
+                        </a>
+                        <span class="total-duration">
+                          <img src="images/massafm_site_loader.gif" alt="" />
+                        </span>
+                      </div>
+                    </div>
+                    <div class="podcast-item-detail">
+                      <h2 class="podcast-chapeu mfm-roxo">#MassaFM | Episódio 2</h2>
+                      <h1 class="podcast-titulo mfm-roxo">Tema do Podcast Ep. 02</h1>
+                      <h4 class="podcast-data mfm-cinza">10 de março de 2020</h4>
+                      <div class="podcast-item-detail-info">
+                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae officiis tenetur illum adipisci.</h3>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="podcast-item-player">
+                      <div class="controls">
+                        <a href="#" class="btn-play play first" id="play-1">
+                          <div class="track" url="podcasts/audio5.mp3" title="Tema do Podcast Ep. 01"></div>
+                          <div class="border-gradient">
+                            <div class="equalize">
+                              <i class="everlib-logo-first-bar"></i>
+                              <i class="everlib-logo-second-bar"></i>
+                              <i class="everlib-logo-third-bar"></i>
+                            </div>
+                          </div>
+                          <h3><i class="mdi mdi-play-circle-outline"></i></h3>
+                        </a>
+                        <span class="total-duration">
+                          <img src="images/massafm_site_loader.gif" alt="" />
+                        </span>
+                      </div>
+                    </div>
+                    <div class="podcast-item-detail">
+                      <h2 class="podcast-chapeu mfm-roxo">#MassaFM | Episódio 1</h2>
+                      <h1 class="podcast-titulo mfm-roxo">Tema do Podcast Ep. 01</h1>
+                      <h4 class="podcast-data mfm-cinza">03 de março de 2020</h4>
+                      <div class="podcast-item-detail-info">
+                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae officiis tenetur illum adipisci.</h3>
                       </div>
                     </div>
                   </li>
@@ -1090,7 +1171,7 @@
               </div>
             </div>
             <div class="player-anuncio">
-              <img src="https://via.placeholder.com/320x75?text=Anúncio" alt="" />
+              <img src="https://via.placeholder.com/320x75?text=Anúncio%20320x75" alt="" />
             </div>
           </div>
         </div>
