Realizado ajustes no banner rotativo e layout

--- a/src/podcasts.html
+++ b/src/podcasts.html
@@ -244,11 +244,11 @@
     <!-- Fim Menu topo -->
 
     <!-- Inicio Banner Destaque -->
-    <div class="section banner-destaque" style="background-image: url('images/banner_noticias.png');">
+    <div class="section banner-destaque" style="background-image: url('images/banner_podcasts.jpg');">
       <div class="content">
-        <div class="title">
-          <h1>Destaques</h1>
-          <p>Notícias Massa FM</p>
+        <div class="title podcast">
+          <h1>POD<br />CAST</h1>
+          <p>Massa FM</p>
         </div>
       </div>
     </div>
